# OpenJaws

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AUDIT_NOTE.md  AUDIT_NOTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPENJAWS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  bunfig.toml  knip.json  openjaws.bat  openjaws.sh  package.json  release-policy.json  run.bat  run.ps1  setup.bat  setup.ps1  tsconfig.json
apps/jaws-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/jaws-desktop/src-tauri/capabilities/: default.json
apps/jaws-desktop/src-tauri/icons/: icon.icns
apps/jaws-desktop/src-tauri/src/: main.rs
benchmarks/: __init__.py
scripts/: agentic-orchestration-guardrails.test.ts  agentic-orchestration-guardrails.ts  apex-bridge-health.test.ts  apex-bridge-health.ts  audit-openjaws-sft.ts  bootstrap-jaws-admin.ts  build-benchmark-cli.ts  build-native.ts  build-release-asset.ts  build-website.test.ts  build-website.ts  check-public-showcase-copy.test.ts  check-public-showcase-copy.ts  ci-bun-install.mjs  ci-bun-install.ts  dce-require-paths.test.ts  deferred-launch-controls-live.ts  deferred-launch-walkthrough.tsx  deploy-qline-site.test.ts  deploy-qline-site.ts  discord-agent-auth-preflight.test.ts  discord-agent-auth-preflight.ts  discord-agent-supervisor.test.ts  discord-agent-supervisor.ts  discord-q-agent-personaplex.test.ts  dispatch-gemma4-route.ts  dispatch-q-route.ts  export-openjaws-banner.ts  export-openjaws-sft.ts  export-q-mark.ts  gemini-media.ts  gemma-route-contention-live.ts  gemma-route-failure-live.ts  (+81 more)
(+1386 files in other folders)
