[package]
name = "jaws-desktop"
version = "0.1.9"
description = "JAWS native desktop shell for OpenJaws."
authors = ["PossumX"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls-no-provider"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
